# serializer version: 1
# name: test_create[obj]
  dict({
    'files': list([
    ]),
    'id': 1,
    'index': dict({
      'id': 'bf1b993c',
      'version': 11,
    }),
    'job': dict({
      'id': 4,
      'progress': 0,
      'state': <JobState.PENDING: 'pending'>,
      'user': dict({
        'handle': 'zclark',
        'id': 2,
      }),
      'workflow': <Workflow.NUVS: 'nuvs'>,
    }),
    'ready': False,
    'reference': dict({
      'data_type': <ReferenceDataType.genome: 'genome'>,
      'id': 1,
      'name': 'Test Reference',
    }),
    'results': None,
    'sample': dict({
      'id': 1,
    }),
    'subtractions': list([
      dict({
        'id': 1,
        'name': 'Subtraction 1',
      }),
      dict({
        'id': 2,
        'name': 'Subtraction 2',
      }),
    ]),
    'user': dict({
      'handle': 'zclark',
      'id': 2,
    }),
    'workflow': 'nuvs',
  })
# ---
# name: test_find[0]
  dict({
    'documents': list([
    ]),
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 0,
  })
# ---
# name: test_find[1]
  dict({
    'documents': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'id': 2,
        'index': dict({
          'id': 'bf1b993c',
          'version': 11,
        }),
        'job': dict({
          'created_at': 'approximately_now_datetime',
          'id': 6,
          'progress': 0,
          'state': <JobState.PENDING: 'pending'>,
          'user': dict({
            'handle': 'zclark',
            'id': 2,
          }),
          'workflow': <Workflow.NUVS: 'nuvs'>,
        }),
        'ready': False,
        'reference': dict({
          'data_type': <ReferenceDataType.genome: 'genome'>,
          'id': 1,
          'name': 'Test Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
          dict({
            'id': 1,
            'name': 'Subtraction 1',
          }),
          dict({
            'id': 2,
            'name': 'Subtraction 2',
          }),
        ]),
        'updated_at': 'approximately_now_datetime',
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflow': 'nuvs',
      }),
    ]),
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 1,
  })
# ---
# name: test_find[2]
  dict({
    'documents': list([
      dict({
        'created_at': 'approximately_now_datetime',
        'id': 3,
        'index': dict({
          'id': 'bf1b993c',
          'version': 11,
        }),
        'job': dict({
          'created_at': 'approximately_now_datetime',
          'id': 7,
          'progress': 0,
          'state': <JobState.PENDING: 'pending'>,
          'user': dict({
            'handle': 'zclark',
            'id': 2,
          }),
          'workflow': <Workflow.NUVS: 'nuvs'>,
        }),
        'ready': False,
        'reference': dict({
          'data_type': <ReferenceDataType.genome: 'genome'>,
          'id': 1,
          'name': 'Test Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
          dict({
            'id': 1,
            'name': 'Subtraction 1',
          }),
          dict({
            'id': 2,
            'name': 'Subtraction 2',
          }),
        ]),
        'updated_at': 'approximately_now_datetime',
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflow': 'nuvs',
      }),
      dict({
        'created_at': 'approximately_now_datetime',
        'id': 2,
        'index': dict({
          'id': 'bf1b993c',
          'version': 11,
        }),
        'job': dict({
          'created_at': 'approximately_now_datetime',
          'id': 6,
          'progress': 0,
          'state': <JobState.PENDING: 'pending'>,
          'user': dict({
            'handle': 'zclark',
            'id': 2,
          }),
          'workflow': <Workflow.NUVS: 'nuvs'>,
        }),
        'ready': False,
        'reference': dict({
          'data_type': <ReferenceDataType.genome: 'genome'>,
          'id': 1,
          'name': 'Test Reference',
        }),
        'sample': dict({
          'id': 1,
        }),
        'subtractions': list([
          dict({
            'id': 1,
            'name': 'Subtraction 1',
          }),
          dict({
            'id': 2,
            'name': 'Subtraction 2',
          }),
        ]),
        'updated_at': 'approximately_now_datetime',
        'user': dict({
          'handle': 'zclark',
          'id': 2,
        }),
        'workflow': 'nuvs',
      }),
    ]),
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 2,
  })
# ---
# name: test_upload_file
  dict({
    'analysis': 1,
    'description': None,
    'format': 'fasta',
    'id': 1,
    'name': 'test',
    'name_on_disk': '1-test',
    'size': 723988,
    'uploaded_at': 'approximately_now_datetime',
  })
# ---
